Theme: fix table width on mobile

--- a/themes/Trigo/assets/css/body.css
+++ b/themes/Trigo/assets/css/body.css
@@ -73,7 +73,6 @@ table {
   width: 100%;
   border-collapse: collapse;
   overflow-x: auto;
-  word-break: keep-all;
   margin-bottom: 2rem;
 }
 
